--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
 
     <!-- wonder -->
 
-    <section class="md:max-w-[1250px] w-full  m-auto p-8 shadow-md rounded-lg ">
+    <section class="md:max-w-[1250px] w-full h-[430px] md:h-[620px] m-auto p-8 shadow-md rounded-lg">
+
 
      <div class="flex justify-between md:mx-10">
           <div class="flex justify-between items-center gap-x-3 ">
@@ -196,93 +197,119 @@
           </div>
      </div>
 
-     <div class="w-full" id="ctn">
+     <div class="w-full mt-5" id="ctn">
 
-          <div #swiperRef="" class="swiper ndSwiper pt-10 rounded-md md:px-5">
+
+          <div #swiperRef="" class="swiper ndSwiper rounded-md px-10">
+
 
                <div class="swiper-wrapper pb-5 ">
 
-                    <div class="swiper-slide ">
+                    <div class="swiper-slide m-auto">
                          <div class="relative ">
-                              <img src="./img/second-swiper-3.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+
+                              <img src="../img/second-swiper-3.jpg" class="rounded-xl m-auto">
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-5 md:text-xl">
+                         <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
+
                               <p>Arsenal</p>
                               <p class="line-through text-gray-500 text-[15px]">2.500.000 t</p>
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-6 md:text-md">
-                              <p class="text-gray-500">تیشرت</p>
-                              <p class="text-green-600 text-[15px]">2.000.000 t</p>
+
+                         <div class="flex items-center justify-between mt-4 px-3 text-sm md:text-xl">
+                              <p class="text-gray-500">تی شرت</p>
+                              <p class="text-green-600">2.000.000 t</p>
+
                          </div>
                     </div>
 
-                    <div class="swiper-slide">
+                    <div class="swiper-slide m-auto">
                          <div class="relative ">
-                              <img src="./img/second-swiper-1.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="../img/second-swiper-1.jpg" class="rounded-xl m-auto">
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-5 md:text-xl">
+
+                         <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
+
                               <p>Atlas</p>
                               <p class="line-through text-gray-500 text-[15px]">2.500.000 t</p>
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-6 md:text-md">
-                              <p class="text-gray-500">تیشرت</p>
-                              <p class="text-green-600 text-[15px]">2.000.000 t</p>
+
+                         <div class="flex items-center justify-between mt-5 px-3 text-sm md:text-xl">
+                              <p class="text-gray-500">تی شرت</p>
+                              <p class="text-green-600">2.000.000 t</p>
+
                          </div>
                     </div>
 
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="./img/second-swiper-4.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="../img/second-swiper-4.jpg" class="rounded-xl m-auto">
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-5 md:text-xl">
+
+                         <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
+
                               <p>Hades</p>
                               <p class="line-through text-gray-500 text-[15px]">2.500.000 t</p>
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-6 md:text-md">
-                              <p class="text-gray-500">تیشرت</p>
-                              <p class="text-green-600 text-[15px]">2.000.000 t</p>
+
+                         <div class="flex items-center justify-between mt-5 px-3 text-sm md:text-xl">
+                              <p class="text-gray-500">تی شرت</p>
+                              <p class="text-green-600">2.000.000 t</p>
+
                          </div>
                     </div>
                     
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="./img/second-swiper-2.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="../img/second-swiper-2.jpg" class="rounded-xl m-auto">
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-5 md:text-xl">
+
+                         <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
+
                               <p>Zeus</p>
                               <p class="line-through text-gray-500 text-[15px]">2.500.000 t</p>
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-6 md:text-md">
-                              <p class="text-gray-500">تیشرت</p>
-                              <p class="text-green-600 text-[15px]">2.000.000 t</p>
+
+                         <div class="flex items-center justify-between mt-5 px-3 text-sm md:text-xl">
+                              <p class="text-gray-500">تی شرت</p>
+                              <p class="text-green-600">2.000.000 t</p>
+
                          </div>
                     </div>
 
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="./img/second-swiper-5.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="../img/second-swiper-5.jpg" class="rounded-xl m-auto">
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-5 md:text-xl">
+
+                         <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
+
                               <p>Thor</p>
                               <p class="line-through text-gray-500 text-[15px]">2.500.000 t</p>
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-6 md:text-md">
-                              <p class="text-gray-500">تیشرت</p>
-                              <p class="text-green-600 text-[15px]">2.000.000 t</p>
+
+                         <div class="flex items-center justify-between mt-5 px-3 text-sm md:text-xl">
+                              <p class="text-gray-500">تی شرت</p>
+                              <p class="text-green-600">2.000.000 t</p>
+
                          </div>
                     </div>
 
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="./img/second-swiper-6.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="../img/second-swiper-6.jpg" class="rounded-xl m-auto">
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-5 md:text-xl">
+
+                         <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
+
                               <p>Loki</p>
                               <p class="line-through text-gray-500 text-[15px]">2.500.000 t</p>
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-6 md:text-md">
-                              <p class="text-gray-500">تیشرت</p>
-                              <p class="text-green-600 text-[15px]">2.000.000 t</p>
+
+                         <div class="flex items-center justify-between mt-5 px-3 text-sm md:text-xl">
+                              <p class="text-gray-500">تی شرت</p>
+                              <p class="text-green-600">2.000.000 t</p>
+
                          </div>
                     </div>
 
