complete index file

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
      <title>shop site</title>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-     <link rel="stylesheet" href="./output.css">
-     <link rel="stylesheet" href="./input.css">
-     <link rel="stylesheet" href="./style.css">
+     <link rel="stylesheet" href="./src/output.css">
+     <link rel="stylesheet" href="./src/input.css">
+     <link rel="stylesheet" href="./src/style.css">
      <link
      href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
      rel="stylesheet"
@@ -17,7 +17,7 @@
      <style>
         @font-face {
              font-family: 'myFirstFont';
-             src: url(../font/Vazir-Medium.ttf);
+             src: url(./font/Vazir-Medium.ttf);
         }
      </style>
 
@@ -36,7 +36,7 @@
     <section class="w-full p-6 ">  
          <div class="w-full md:max-w-[1250px] m-auto p-4 flex items-center justify-between ">
               <div class="md:w-1/3 flex sm:opacity-100 ">
-                   <img class="cursor-pointer w-0 lg:w-[40px]" src="./../img/cart-new.svg" alt="">
+                   <img class="cursor-pointer w-0 lg:w-[40px]" src="./img/cart-new.svg" alt="">
                    <img class="md:h-8 md:inline-block hidden mt-2 cursor-pointer lg:w-0" width="30" height="30" src="https://img.icons8.com/ios-glyphs/60/000000/search--v1.png" alt="search--v1"/>
                    <span class="block cursor-pointer md:hidden font-bold text-2xl menu"  id="toggle-btn" >
                         <img id="menu" class="w-5 sm:w-8 cursor-pointer md:hidden " width="30" height="30" src="https://img.icons8.com/ios-filled/50/menu--v1.png" alt="menu--v1"/>                               
@@ -158,22 +158,22 @@
     <section class="w-full md:max-w-[1250px] h-auto p-2 my-10 m-auto ">
         <div class="flex flex-wrap justify-around gap-2 h-full">
           <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
-               <img src="../img/t-shirt.png" alt="">
+               <img src="./img/t-shirt.png" alt="">
           </div>
           <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
-               <img src="../img/pants.png" alt="">
+               <img src="./img/pants.png" alt="">
           </div>
           <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
-               <img src="../img/atr.jpg" alt="">
+               <img src="./img/atr.jpg" alt="">
           </div>
           <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
-               <img src="../img/sofa.jpg" alt="">
+               <img src="./img/sofa.jpg" alt="">
           </div>
           <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
-               <img src="../img/gift.jpg" alt="">
+               <img src="./img/gift.jpg" alt="">
           </div>
           <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
-               <img src="../img/watch.jpg" alt="">
+               <img src="./img/watch.jpg" alt="">
 
           </div>
         </div>
@@ -209,7 +209,7 @@
                     <div class="swiper-slide ">
                          <div class="relative ">
 
-                              <img src="../img/second-swiper-3.jpg" class="rounded-xl m-auto">
+                              <img src="./img/second-swiper-3.jpg" class="rounded-xl m-auto">
                          </div>
                          <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
 
@@ -226,7 +226,7 @@
 
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="../img/second-swiper-1.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="./img/second-swiper-1.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
                          </div>
 
                          <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
@@ -244,7 +244,7 @@
 
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="../img/second-swiper-4.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="./img/second-swiper-4.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
                          </div>
 
                          <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
@@ -262,7 +262,7 @@
                     
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="../img/second-swiper-2.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="./img/second-swiper-2.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
                          </div>
 
                          <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
@@ -280,7 +280,7 @@
 
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="../img/second-swiper-5.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="./img/second-swiper-5.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
                          </div>
 
                          <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
@@ -298,7 +298,7 @@
 
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="../img/second-swiper-6.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="./img/second-swiper-6.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
                          </div>
 
                          <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
