finish bani-mode site

--- a/src/index.html
+++ b/src/index.html
@@ -414,11 +414,76 @@
 
     <!-- Footer -->
 
-    <section class="w-full md:max-w-[1250px]  m-auto p-4 text-right border-t-2 border-gray-500 ">
-     <div></div>
+    <section class="w-full md:max-w-[1250px]  m-auto  text-right border-t-2 border-gray-200 pt-8">
+     <div class="w-full  md:text-right justify-around flex flex-wrap cursor-pointer gap-y-4">
+          <div class="md:w-[250px]  p-2">
+               <ul class="">
+                    <li class="text-gray-400 pb-6">خرید از بانی‌مد</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">لباس مردانه</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">خرید لباس زنانه برند</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">خرید کیف و کفش برند</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">خرید محصولات ارایشی</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">خرید ساعت اورجینال</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">خرید لوازم خانه با کیفیت</li>
+               </ul>
+          </div>
+
+          <div class="md:w-[250px]  p-2">
+               <ul class="">
+                    <li class="text-gray-400 pb-6">  خدمات مشتریان</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500"> پرسش های متداول</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">شرایظ بازگشت</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">راهنمای خرید</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500"> فروش b2b</li>
+               </ul>
+          </div>
+
+          <div class="md:w-[250px] p-2">
+               <ul class="">
+                    <li class="text-gray-400 pb-6">اطلاعات بانی مد</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500"> درباره ما</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">قوانین و مقررات</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">تماس با ما</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">فرصت های شغلی</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">همکاری تجاری</li>
+               </ul>
+          </div>
+
+          <div class="md:w-[250px]  p-2">
+               <ul class="">
+                    <li class="text-gray-400 pb-6">منتظر صدای گرمتون هستیم</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">تلفن : 2345-021</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">پیامک : 100042</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">ایمیل : jafarihadi661@gamil.com</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">فرصت های شغلی</li>
+                    <li class="mb-4 font-sans text-sm hover:text-green-500">همکاری تجاری</li>
+               </ul>
+          </div>
+
+          <div class="w-[200px] md:w-[250px]  p-2 float-left cursor-pointer">
+               <ul >
+                    <li class="w-full text-left block">
+                         <img src="./../img/footer-logo.svg" class="w-[70%] float-left" alt="">
+                    </li>
+                    <li class="mt-8 float-left p-3 w-[70%] rounded-xl bg-gradient-to-r from-green-700 to-green-500 flex">
+                         <span class="text-xs text-white">دریافت اپلیکیشن از</span>
+                         <img src="https://www.banimode.com//themes/new/assets/images/icon/bazaar-logo.svg" alt="">
+                    </li>
+                    <li class="mt-2 float-left p-3 w-[70%] rounded-xl border-2 border-black flex">
+                         <span class="text-xs">دریافت اپلیکیشن از</span>
+                         <img src="https://www.banimode.com//themes/new/assets/images/icon/sib-app.png" class="w-[50%] h-[50%]" alt="">
+                    </li>
+                    <li class="mt-2 float-left p-3 w-[70%] rounded-xl border-2 border-green-500 flex justify-center items-center">
+                         <span class="text-sm text-green-500">دانلود اپلیکیشن</span>
+                         <img src="https://www.banimode.com//themes/new/assets/images/app-download.svg" class="" alt="">
+                    </li>
+               </ul>
+          </div>
+        
+     </div>
     </section>
 
-
+    <h3 class="mt-8 text-center text-green-600">Directed by Hadi-front & Ali-arsenal</h3>
 
 
 
