--- a/src/index.html
+++ b/src/index.html
@@ -26,21 +26,16 @@
 ⁡⁢⁣⁣<!-- version 1.2.2 -->⁡
 
 <body  style="font-family: myFirstFont; overflow-x: hidden; -webkit-font-smoothing: antialiased; padding-bottom: 50px;">
-⁡⁢⁣⁣<!-- version 1.2.2 -->⁡
-
-<body  style="font-family: myFirstFont; overflow-x: hidden; -webkit-font-smoothing: antialiased; padding-bottom: 50px;">
 
      <!-- ***************************** GIF **************************** -->
 
      <div class="hidden md:block">
-         <a href="#" class="cursor-pointer"><img class="w-full h-[60px] object-cover" src="https://www.banimode.com/img/cms/030507/1722179219.gif" alt=""></a>
          <a href="#" class="cursor-pointer"><img class="w-full h-[60px] object-cover" src="https://www.banimode.com/img/cms/030507/1722179219.gif" alt=""></a>
     </div>
     
     <!-- **************************** HEADER ****************************** -->
 
     <section class="w-full p-6 ">  
-
 
          <div class="w-full md:max-w-[1250px] m-auto p-4 flex items-center justify-between ">
               <div class="md:w-1/3 flex sm:opacity-100 ">
@@ -163,10 +158,8 @@
 
     <!-- Category -->
 
-
-    <section class="w-full md:max-w-[1250px] h-auto p-2 mt-4 m-auto ">
-        <div class="flex flex-wrap justify-around gap-2 h-full cursor-pointer">
-
+    <section class="w-full md:max-w-[1250px] h-auto p-2 my-10 m-auto ">
+        <div class="flex flex-wrap justify-around gap-2 h-full">
           <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
                <img src="../img/t-shirt.png" alt="">
           </div>
@@ -190,8 +183,7 @@
 
     </section>
 
-
-    <!-- Category_2 -->
+    <!-- wonder -->
 
 
     <section class="md:max-w-[1250px] w-full  m-auto px-3  border-b-2 rounded-lg">
